	 autogenerated-file comment to settings.h, add missing Id tags, and
	 boilerplate formatting fixes (Stuart).
20070526 keysyms.pl,ui/win32/{Makefile.am,keysyms.c}: autogenerate
         ui/win32/keysyms.c from keysyms.dat (Stuart).
20070526 hacking/Makefile.am,ui/win32/Makefile.am: update EXTRA_DIST lines to
	 reflect new location of win32_todo.txt (Stuart).
20070527 widget/filesel.c: don't segfault when the down key is pressed in a
	 directory with only one entry (Stuart).
20070527 z80/{z80.pl,z80_macros.h},z80/tests/{d,f}dcb{4,5,6,7}?.out: fix
	 undocumented flags after BIT n,(IX+d) instructions (fixes bug
	 #1726453).
20070527 if1.c: disable if1_plug() on Win32 (Stuart).
20070527 menu.h,ui/win32/{Makefile.am,error.c,icons/Makefile.am,menu_data.c,
	 pokefinder.rc,statusbar.c,win32display.h,win32internals.h,
	 win32keyboard.c,win32ui.{c,rc}}: build fixes for Win32 UI, and
	 distribute Win32 UI icons (Stuart).
20070528 ui/win32/win32ui.c: implement File->Exit, File->Reset, File->Save,
	 and menu_get_filename() (Stuart).
20070528 ui/win32/{debugger.c,error.c,pokefinder.c,statusbar.c,win32display.c,
	 win32ui.c,win32ui.rc}: whitespace cleanups (Stuart).
20070529 configure.in,ui/win32/{Makefile.am,win32internals.h,win32ui.rc},
	 windres.rc: work around linker problems affecting Windows resources,
	 and link/include commdlg (Stuart).
20070529 ui/win32/{menu_data.{c,h,rc},win32ui.c}: update Win32 menus, and fix
	 compilation of load/save dialogs (Stuart).
20070529 ui/win32/{debugger.h,pokefinder.h,statusbar.c,win32display.c,
	 win32internals.h,win32ui.c}: use winfuse.ico for Win32 UI window,
	 disable (broken) status bar, change resource IDs to avoid clashes
	 with menu IDs, various cleanups (Stuart).
20070530 tape.c: use refactored call to set tape state (patch #1725974) (Fred).
20070530 profile.c: remove a couple of warnings (Fred).
20070530 menu_data.pl: add code to generate menu data for Win32 UI (Stuart).