@@ -50,6 +50,7 @@ typedef enum event_type {
   EVENT_TYPE_TRDOS_CMD_DONE,
   EVENT_TYPE_TRDOS_INDEX,
   EVENT_TYPE_TIMER,
+  EVENT_TYPE_TAPE_RECORD,
 
 } event_type;
 
